# Calcli

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md
calcli/app/: CMakeLists.txt  application.cpp  application.hpp  calcli.cpp  calcli.hpp  main.cpp
calcli/application/: CMakeLists.txt  application.cpp  application.hpp  engine.cpp  engine.hpp  main.cpp
calcli/core/: CMakeLists.txt  cmap.hpp  constant.hpp  error.hpp  evaluator.cpp  evaluator.hpp  function.cpp  function.hpp  lexer.cpp  lexer.hpp  operator.cpp  operator.hpp  token.hpp
calcli/processing/: CMakeLists.txt  evaluation.cpp  evaluation.hpp  evaluator.cpp  lexer.cpp  parse.cpp  parse.hpp
ci/: build.py  tests.py
cmake/: OutputDirectories.cmake
src/: CMakeLists.txt  calcli.cpp  constant.hpp  main.cpp
src/api/: CMakeLists.txt  expression.cpp  expression.hpp
src/calcli-application/: application.cpp  application.hpp
src/calcli-core/: CMakeLists.txt  cmap.hpp  constant.hpp  function.cpp  function.hpp  operator.cpp  operator.hpp  token.hpp
src/calcli-processing/: CMakeLists.txt  evaluation.cpp  evaluation.hpp  parse.cpp  parse.hpp
src/cli/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/core/: CMakeLists.txt  cmap.hpp  constant.hpp  error.hpp  function.cpp  function.hpp  operator.cpp  operator.hpp  processing.hpp  token.hpp
src/pinky/: CMakeLists.txt  cmap.hpp  constant.hpp  error.hpp  evaluation.cpp  evaluation.hpp  extraction.hpp  function.cpp  function.hpp  operator.cpp  operator.hpp  parse.cpp  parse.hpp  processing.cpp  types.hpp
tests/: CMakeLists.txt  test_calcli.cpp  test_cmap.cpp  test_evaluator.cpp  test_expression.cpp  test_extraction.cpp  test_function.cpp  test_infix_to_postfix.cpp  test_lexer.cpp  test_operator.cpp  test_pinky.cpp  test_postfix_evaluation.cpp  test_tokenization.cpp  test_toto.cpp
tools/ci/: build.py  tests.py
tools/cmake/: CompilerWarnings.cmake  OutputDirectories.cmake  StaticAnalyzers.cmake
